Base Station- fix to Improved visibility of navbar link selections

--- a/software/open-qm-base-station/src/main/resources/META-INF/resources/res/css/bootstrap-adjust.css
+++ b/software/open-qm-base-station/src/main/resources/META-INF/resources/res/css/bootstrap-adjust.css
@@ -8,9 +8,9 @@ a.active,button.active {
 	font-weight: bold;
 }
 
-.nav-link:hover {
+.navbar .nav-link:hover {
 	border: 1px dotted black !important;
 }
-.nav-link {
-	border: 1px dotted #eeeeee !important;
+.navbar .nav-link {
+	border: 1px dotted rgba(0,0,0, 0) !important;
 }
